--- a/style.css
+++ b/style.css
@@ -75,3 +75,12 @@ footer{
     margin: auto;
     padding: 1rem;
 }
+
+@media screen and (min-width: 600px){
+    main{
+        width: 300px;
+    }
+    textarea{
+        width: 35em;
+    }
+}
