--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ footer{
     margin: auto;
     padding: 1.8rem;
 }
+#small{
+    display: flex;
+    margin-top: 1rem;
+    justify-content: center;
+}
 
 @media screen and (max-width: 600px){
     .about{
