--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+img{
+    width: 10rem;
+    margin: 1rem auto;
+}
+
 nav{
     background-color: var(--primary-color);
     color: var(--minion-blue);
@@ -22,6 +27,8 @@ main{
     margin: 2rem auto;
     width: 600px;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 textarea{
